--- a/M4/M4D4/UPLOAD SU GITHUB/index.html
+++ b/M4/M4D4/UPLOAD SU GITHUB/index.html
@@ -41,7 +41,7 @@ Per raggiungere questo risultato, segui queste istruzioni:
 – Aggiungi un bottone “salta” a tutte le card
 – Quando cliccato, questo bottone dovrebbe far sparire la card corrispondente. fatto
 – Aggiungi un input di testo che funzioni come una barra di ricerca. Quando l’utente scrive più di 3 caratteri, filtra il risultato dell’API per renderizzare solo i libri con un titolo che corrisponda, anche parzialmente, al contenuto dell’input. SUGGERIMENTO: usa .filter()
-– Dai la possibilità all’utente di cancellare libri dal loro carrello
+– Dai la possibilità all’utente di cancellare libri dal loro carrello fatto
 – Conta gli elementi nel carrello usando “.reduce()” e mostra il risultato nella sezione carrello
 
 ### EXTRA:
@@ -73,7 +73,7 @@ Per raggiungere questo risultato, segui queste istruzioni:
               Cart
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <div id="cart" class="dropdown-item">
+              <div id="cart" class="dropdown-item d-flex flex-column">
 
 
               </div>
