--- a/M4/M4D4/UPLOAD SU GITHUB/index.html
+++ b/M4/M4D4/UPLOAD SU GITHUB/index.html
@@ -64,7 +64,7 @@ Per raggiungere questo risultato, segui queste istruzioni:
             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
           </li>
           <form id="searchbar">
-            <input type="text" id="search">
+            <input type="text" id="searchBar">
             <button type="submit" id="buttonsearch">cerca</button>
             </form>
           <li class="nav-item dropdown">
@@ -103,7 +103,7 @@ Per raggiungere questo risultato, segui queste istruzioni:
   </div>
 
 
-  <script src="main.js"></script>
+  <script src="main2.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
     integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
     crossorigin="anonymous"></script>
