--- a/M4/M4D6/UPLOAD SU GITHUB/index.html
+++ b/M4/M4D6/UPLOAD SU GITHUB/index.html
@@ -49,19 +49,21 @@ Questi sono i tuoi compiti:
 – Usa Google Maps per mostrare la posizione degli utenti. Puoi usare l’iframe della tab “share” -->
 
 
-<div class="card">
+<div class="card d-flex justify-content-between" id ="mainCard">
+    <div class="card-img" id="newCard"></div>
+    <h2>Users</h2>
 
-    <div class="card-img"></div>
-    <h5>titolo1</h5>
-    <h5>titolo2</h5>
-
+    <!-- <h5 id="name"></h5>
+    <h5 id="username"></h5>
+    <h5 id="email"></h5> -->
+<input type="">
 </div>
 
 
 
 
 
-
+<script src="./main.js"></script>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
 integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
 crossorigin="anonymous"></script>
