--- a/M4/M4D6/UPLOAD SU GITHUB/index.html
+++ b/M4/M4D6/UPLOAD SU GITHUB/index.html
@@ -48,22 +48,30 @@ Questi sono i tuoi compiti:
 – Aggiungi un bottone che ordini gli utenti per nome in senso ascendente E discendente. NON DUE BOTTONI, SOLO UNO!
 – Usa Google Maps per mostrare la posizione degli utenti. Puoi usare l’iframe della tab “share” -->
 
+<h2>Users</h2>
 
-<div class="card d-flex justify-content-between" id ="mainCard">
-    <div class="card-img" id="newCard"></div>
-    <h2>Users</h2>
+<div class="card d-flex flex-row flex-wrap justify-content-center" id ="mainCard">
+    <div class="card-img d-flex justify-content-between" id="newCard"></div>
 
     <!-- <h5 id="name"></h5>
     <h5 id="username"></h5>
     <h5 id="email"></h5> -->
-<input type="">
+</div>
+<div>
+<h2>Search Users</h2>    
+<select name="Scegli" id="Select"> Select Filter
+    <option value="name">Name</option>
+    <option value="username">Username</option>
+    <option value="email">Email</option>
+</select>
+<input type="text">
 </div>
 
 
 
 
 
-<script src="./main.js"></script>
+<script src="./main2.js"></script>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
 integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
 crossorigin="anonymous"></script>
