--- a/M4/M4D6/UPLOAD SU GITHUB/index.html
+++ b/M4/M4D6/UPLOAD SU GITHUB/index.html
@@ -14,7 +14,7 @@ Esercizi
 
 ## 💾 DATABASE UTENTI CON FILTRO
 
-### Usa bootstrap per creare un layout VELOCE, concentrati sulla parte in JS.
+### Usa bootstrap per creare un layout VELOCE, concentrati sulla parte in JS. fatto
 
 You are creating a frontend application that displays users received from an API and filter them nicely.
 
@@ -60,18 +60,19 @@ Questi sono i tuoi compiti:
 <div>
 <h2>Search Users</h2>    
 <select name="Scegli" id="Select"> Select Filter
-    <option value="name">Name</option>
+    <option id="searchName" value="name">Name</option>
     <option value="username">Username</option>
     <option value="email">Email</option>
 </select>
-<input type="text">
+<input type="text" id="inputSearch">
+<button id="buttonSearch">Cerca</button>
 </div>
 
 
 
 
 
-<script src="./main2.js"></script>
+<script src="./main.js"></script>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
 integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
 crossorigin="anonymous"></script>
