--- a/M4/M4D4/UPLOAD SU GITHUB/index.html
+++ b/M4/M4D4/UPLOAD SU GITHUB/index.html
@@ -78,7 +78,7 @@ Per raggiungere questo risultato, segui queste istruzioni:
             </div>
           </li>
         </ul>
-      </div class="">
+      </div>
     </nav>
   </div>
     <div id="contenitore">
