--- a/M4/M4D6/UPLOAD SU GITHUB/index.html
+++ b/M4/M4D6/UPLOAD SU GITHUB/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <title>Document</title>
 </head>
+
 <body>
     <!-- 
 Esercizi
@@ -48,39 +50,40 @@ Questi sono i tuoi compiti:
 – Aggiungi un bottone che ordini gli utenti per nome in senso ascendente E discendente. NON DUE BOTTONI, SOLO UNO!
 – Usa Google Maps per mostrare la posizione degli utenti. Puoi usare l’iframe della tab “share” -->
 
-<h2>Users</h2>
+    <h2>Users</h2>
 
-<div class="card d-flex flex-row flex-wrap justify-content-center" id ="mainCard">
-    <div class="card-img d-flex justify-content-between" id="newCard"></div>
-
-    <!-- <h5 id="name"></h5>
-    <h5 id="username"></h5>
-    <h5 id="email"></h5> -->
-</div>
-<div>
-<h2>Search Users</h2>    
-<select name="Scegli" id="Select"> Select Filter
-    <option id="searchName" value="name">Name</option>
-    <option value="username">Username</option>
-    <option value="email">Email</option>
-</select>
-<input type="text" id="inputSearch">
-<button id="buttonSearch">Cerca</button>
-</div>
+    <div class="container" id="mainCard">
+        <div  
+        id="newCard" class="card">
 
 
+        </div>
+    </div>
+    <div>
+        <h2>Search Users</h2>
+        <select name="Scegli" id="Select"> Select Filter
+            <option value="name">Name</option>
+            <option value="username">Username</option>
+            <option value="email">Email</option>
+        </select>
+        <input type="text" id="inputSearch">
+        <button id="buttonSearch">Cerca</button>
+    </div>
 
 
 
-<script src="./main.js"></script>
-<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js"
-integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-crossorigin="anonymous"></script>
+
+
+    <script src="./main.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
