--- a/M4/M4D8/UPLOAD SU GITHUB/frontpage.html
+++ b/M4/M4D8/UPLOAD SU GITHUB/frontpage.html
@@ -23,9 +23,9 @@ Le task di oggi:
 – Cliccando su un prodotto, l’utente deve essere reindirizzato ad una pagina prodotto. Passa l’id come query string nell’URL.
 – Nella pagina prodotto, mostra le informazioni del prodotto su cui si è cliccato. Puoi prendere le informazioni dall’endpoint “product/IL TUO ID QUI”
 – Nel backoffice, aggiungi la funzionalità per modificare un prodotto e un pulsante per eliminarlo.
-– Aggiungi una validazione dei prodotti in face di creazione o modifica usando gli alert di bootstrap
+– Aggiungi una validazione dei prodotti in fase di creazione o modifica usando gli alert di bootstrap
 
-l prodotto deve essere strutturato così:
+Il prodotto deve essere strutturato così:
 
 “`jsx
 {
@@ -41,6 +41,8 @@ l prodotto deve essere strutturato così:
 “__v”: 0 // SERVER GENERATED
 }
 “`
+
+NARI STAR COMPRESSE
 
 I campi che dicono “REQUIRED” sono obbligatori. Quelli “SERVER GENERATED”, invece, non serve che siano inviati all’API.
 
