--- a/M4/M4D8/UPLOAD SU GITHUB/frontpage.html
+++ b/M4/M4D8/UPLOAD SU GITHUB/frontpage.html
@@ -1,15 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="style.css">
-    <title>E-COMMERCE FRONT PAGE & BACK OFFICE</title>
-</head>
-<body>
-    <!-- # ESERCIZI
+ <!-- # ESERCIZI
 
 ### E-COMMERCE FRONT PAGE & BACK OFFICE
 
@@ -106,7 +95,62 @@ Solitamente
 1. Ti manca un field nel corpo
 2. Hai una “duplicate key”, cioè il nome del prodotto esiste già
 3. Hai inviato il tipo sbagliato di dati (una stringa invece di un numero o simili) -->
-<script src="./main.js"></script>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">    <link rel="stylesheet" href="style.css">
+    <title>E-COMMERCE FRONT PAGE</title>
+</head>
+<body>
+   
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">e-Commerce Page</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Buy Products</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Manage Products</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+<main>
+<div class="container">
+    <div class="row">
+        <div id="mainContainer">
+
+            <!-- <div class="card" style="width: 18rem;">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div> -->
+
+
+        </div>
+
+    </div>
+</div>
+
+</main>
+
+
+<footer></footer>
+<script src="./front.js"></script>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
     integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
     crossorigin="anonymous"></script>
