--- a/M4/M4D8/UPLOAD SU GITHUB/backofficepage.html
+++ b/M4/M4D8/UPLOAD SU GITHUB/backofficepage.html
@@ -43,21 +43,12 @@
             </div>
 
 
-
-
         </div>
-            <div class="container">
-                <h1>Delete Product</h1>
+        <h1 class="text-primary
+        ">Manage Product</h1>
 
-                <div class="col-6">
-                    <div class="card">
-                        <img class="card-img-top" src="" id="dataImage">
-                    </img>
-                        <div class="card-text" id="dataTitle">a</div>
-                        <div class="card-text" id="dataBrand">z</div>
-                        <div class="btn btn-danger" id="deleteProduct">Elimina</div>
-                    </div>
-                </div>
+            <div class="container d-flex justify-content-around" id="editContainer">
+
             </div>
                
               
