--- a/M4/M4D8/UPLOAD SU GITHUB/frontpage.html
+++ b/M4/M4D8/UPLOAD SU GITHUB/frontpage.html
@@ -107,10 +107,10 @@ Solitamente
 </head>
 <body>
    
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar img navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">e-Commerce Page</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <button class=" carnavbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
@@ -127,24 +127,12 @@ Solitamente
   </nav>
 
 <main>
-<div class="container">
-    <div class="row">
-        <div id="mainContainer">
-
-            <!-- <div class="card" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-              </div> -->
-
-
+    
+        <div id="mainContainer" class=" d-flex flex-wrap flex-row m-1 text-center">
+    
         </div>
 
-    </div>
-</div>
+
 
 </main>
 
