--- a/M4/M4D8/UPLOAD SU GITHUB/frontpage.html
+++ b/M4/M4D8/UPLOAD SU GITHUB/frontpage.html
@@ -11,8 +11,8 @@ Le task di oggi:
 – Nella frontpage, aggiungi un loader che sia visibile mentre l’API elabora i dati.
 – Cliccando su un prodotto, l’utente deve essere reindirizzato ad una pagina prodotto. Passa l’id come query string nell’URL.
 – Nella pagina prodotto, mostra le informazioni del prodotto su cui si è cliccato. Puoi prendere le informazioni dall’endpoint “product/IL TUO ID QUI”
-– Nel backoffice, aggiungi la funzionalità per modificare un prodotto e un pulsante per eliminarlo.
-– Aggiungi una validazione dei prodotti in fase di creazione o modifica usando gli alert di bootstrap
+– Nel backoffice, aggiungi la funzionalità per modificare un prodotto e un pulsante per eliminarlo. fatto
+– Aggiungi una validazione dei prodotti in fase di creazione o modifica usando gli alert di bootstrap fatto
 
 Il prodotto deve essere strutturato così:
 
