--- a/M4/M4D8/UPLOAD SU GITHUB/backofficepage.html
+++ b/M4/M4D8/UPLOAD SU GITHUB/backofficepage.html
@@ -5,14 +5,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
 
     <title>Add Product</title>
 </head>
 
 <body>
-
+    <nav class="navbar img navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">e-Commerce Page</a>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="./frontpage.html">Buy Products</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="./backofficepage.html">Manage Products</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
     <div class="container" id="main">
         <div class="d-flex align-content-center row m-2 p-2 text-center" id="mainContainer">
             <h1 class="text-primary text-center">Add Product</h1>
