--- a/M4/M4D8/UPLOAD SU GITHUB/frontpage.html
+++ b/M4/M4D8/UPLOAD SU GITHUB/frontpage.html
@@ -102,7 +102,8 @@ Solitamente
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="style.css">
     <title>E-COMMERCE FRONT PAGE</title>
 </head>
 <body>
@@ -110,8 +111,6 @@ Solitamente
 <nav class="navbar img navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">e-Commerce Page</a>
-      <button class=" carnavbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
@@ -119,7 +118,7 @@ Solitamente
             <a class="nav-link active" aria-current="page" href="#">Buy Products</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Manage Products</a>
+            <a class="nav-link active" aria-current="page" href="./backofficepage.html">Manage Products</a>
           </li>
         </ul>
       </div>
