--- a/M4/M4D8/UPLOAD SU GITHUB/frontpage.html
+++ b/M4/M4D8/UPLOAD SU GITHUB/frontpage.html
@@ -107,7 +107,9 @@ Solitamente
     <title>E-COMMERCE FRONT PAGE</title>
 </head>
 <body>
-   
+  <!-- <div class="spinner-border" role="status">
+    <span class="visually-hidden" id="loaderSpinner">Loading...</span>
+  </div> -->
 <nav class="navbar img navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">e-Commerce Page</a>
