--- a/M4/M4D8/UPLOAD SU GITHUB/backofficepage.html
+++ b/M4/M4D8/UPLOAD SU GITHUB/backofficepage.html
@@ -63,7 +63,6 @@
         ">Manage Product</h1>
 
         <div class="container d-flex justify-content-around" id="editContainer">
-
             <!-- <button id="editBtn" type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
                 Launch demo modal
               </button> -->
@@ -105,10 +104,8 @@
                     
 
                                 </div>                        </div>
-                        <div class="modal-footer">
+                        <div class="modal-footer" id="modalfooter">
                             <button type="button" class="btn btn-warning" data-dismiss="modal">Back</button>
-                            <button type="button" class="btn btn-primary" data-dismiss="modal" id="editProduct">Confirm</button>
-
                         </div>
                     </div>
 
