--- a/M5/M5D2/UPLOAD SU GITHUB/indicazioni.html
+++ b/M5/M5D2/UPLOAD SU GITHUB/indicazioni.html
@@ -7,14 +7,15 @@
     <title>Document</title>
 </head>
 <body>
+
     <!-- Crea la tua prima applicazione React, EpiBooks!
 
-1. Utilizza il template create-react-app per creare una nuova applicazione.
-2. Installa e importa bootstrap@4.6.1 + react-bootstrap@1.6.4 nell’applicazione.
-3. Crea un componente di nome MyNav, che renderizzerà una navigation bar di bootstrap con i seguenti link: Home, About e Browse.
-Nota: non conosciamo ancora come re-indirizzare l’utente su una diversa pagina, quindi inserisci ‘#’ come destinazione per ognuno di essi.
-4. Crea un componente di nome MyFooter, che renderizzerà un footer per l’applicazione.
-5. Crea un componente di nome Welcome, che renderizzerà un Jumbotron e un titolo per l’applicazione.
+1. Utilizza il template create-react-app per creare una nuova applicazione. fatto
+2. Installa e importa bootstrap@4.6.1 + react-bootstrap@1.6.4 nell’applicazione. fatto
+3. Crea un componente di nome MyNav, che renderizzerà una navigation bar di bootstrap con i seguenti link: Home, About e Browse. fatto
+Nota: non conosciamo ancora come re-indirizzare l’utente su una diversa pagina, quindi inserisci ‘#’ come destinazione per ognuno di essi. fatto
+4. Crea un componente di nome MyFooter, che renderizzerà un footer per l’applicazione. fatto
+5. Crea un componente di nome Welcome, che renderizzerà un Jumbotron e un titolo per l’applicazione. fatto
 6. Crea un componente di nome LatestRelease: questo componente deve leggere da UNO dei file .json forniti e renderizzare una griglia contenente le copertine dei libri.
 
  -->
