--- a/M5/M5D2/UPLOAD SU GITHUB/indicazioni.html
+++ b/M5/M5D2/UPLOAD SU GITHUB/indicazioni.html
@@ -16,7 +16,7 @@
 Nota: non conosciamo ancora come re-indirizzare l’utente su una diversa pagina, quindi inserisci ‘#’ come destinazione per ognuno di essi. fatto
 4. Crea un componente di nome MyFooter, che renderizzerà un footer per l’applicazione. fatto
 5. Crea un componente di nome Welcome, che renderizzerà un Jumbotron e un titolo per l’applicazione. fatto
-6. Crea un componente di nome LatestRelease: questo componente deve leggere da UNO dei file .json forniti e renderizzare una griglia contenente le copertine dei libri.
+6. Crea un componente di nome LatestRelease: questo componente deve leggere da UNO dei file .json forniti e renderizzare una griglia contenente le copertine dei libri. fatto
 
  -->
 </body>
