--- a/M5/M5D4/UPLOAD SU GITHUB/index.html
+++ b/M5/M5D4/UPLOAD SU GITHUB/index.html
@@ -56,10 +56,10 @@ Una GET su https://striveschool-api.herokuapp.com/api/comments/0316438960 ti res
 
 TASKS:
 
-1. Crea un componente CommentArea e incorporalo nel componente SingleBook. Quando un utente clicca su un SingleBook, il componente CommentArea deve venire renderizzato (suggerimento: puoi usare l’operatore &&).
-2. CommentArea deve eseguire una fetch e salvare tutte le recensioni del libro all’interno del suo stato. Deve inoltre renderizzare altri due componenti dentro di sé: CommentList e AddComment.
-3. CommentsList riceverà la lista di recensioni da CommentArea con una prop, e dovrà renderizzare la lista utilizzando un componente SingleComment.
-4. AddComment conterrà un form per raccogliere il testo della recensione e la valutazione da 1 a 5; una volta raccolti i dati, tramite un pulsante verrà effettuata una chiamata POST per inviare la recensione alle API.
+1. Crea un componente CommentArea e incorporalo nel componente SingleBook. Quando un utente clicca su un SingleBook, il componente CommentArea deve venire renderizzato (suggerimento: puoi usare l’operatore &&). fatto
+2. CommentArea deve eseguire una fetch e salvare tutte le recensioni del libro all’interno del suo stato. Deve inoltre renderizzare altri due componenti dentro di sé: CommentList e AddComment. fatto
+3. CommentsList riceverà la lista di recensioni da CommentArea con una prop, e dovrà renderizzare la lista utilizzando un componente SingleComment. fatto
+4. AddComment conterrà un form per raccogliere il testo della recensione e la valutazione da 1 a 5; una volta raccolti i dati, tramite un pulsante verrà effettuata una chiamata POST per inviare la recensione alle API. fatto
 
 EXTRA: 5. A fianco di ogni recensione allega un pulsante per eliminarla: per farlo deve eseguire una richiesta di tipo DELETE su https://striveschool-api.herokuapp.com/api/comments/:commentId 6. Crea un componente Loading (con uno Spinner di react-bootstrap) che apparirà durante l’esecuzione di una richiesta alle API. 7. Crea un componente Error (con un Alert di react-bootstrap) che apparirà nel caso qualcosa andasse storto durante qualsiasi richiesta alle API. -->
 </body>
