--- a/M5/M5D8/UPLOAD SU GITHUB/index.html
+++ b/M5/M5D8/UPLOAD SU GITHUB/index.html
@@ -15,7 +15,7 @@ Ricorda di installare il pacchetto npm: npm i react-router-dom
 
 Crea un componente Route per l’homepage dell’applicazione: dovrebbe puntare a ‘/’ e caricare il componente BookList. FATTO
 Crea un componente Route per una pagina di login, che punterà a una rotta statica senza parametri, come ‘/login’. Questa rotta dovrà renderizzare un component con un form molto semplice, richiedente username e password. Non c’è bisogno che implementi alcun tipo di autenticazione, puoi semplicemente mostrare un messaggio al click del pulsante submit. fatto
-Aggiungi un Link a questa pagina di login nella navbar dell’applicazione.
+Aggiungi un Link a questa pagina di login nella navbar dell’applicazione. fatto
 Crea un componente NotFound, dovrebbe venire renderizzato ogni volta che l’utente naviga su una rotta non gestita.
 Crea un componente Route per un nuovo componente BookDetails. Questa rotta deve passare un parametro ASIN.
 Aggiungi un pulsante in ogni SingleBook per poter navigare a questa nuova rotta dinamica e caricare BookDetails.
