--- a/M6/M6D1/UPLOAD SU GITHUB/index.html
+++ b/M6/M6D1/UPLOAD SU GITHUB/index.html
@@ -51,9 +51,11 @@ Se vuoi connettere il backend e frontend oggi dovrai installare il paccetto 'cor
 Dovrai quindi importarlo con un import statement 
 Puoi usare cors col seguente comando 'server.use(cors())'
 
-Impareremo cos'è CORS nella prossima lezione ;) */ -->
+Impareremo cos'è CORS nella prossima lezione ;)
 
 
+FINITOOOOOOOOO
+*/ -->
 
 
 </body>
