--- a/M6/M6D2/UPLOAD SU GITHUB/index.html
+++ b/M6/M6D2/UPLOAD SU GITHUB/index.html
@@ -76,8 +76,8 @@ NOTA: Ricorda di installare il pacchetto 'cors' con 'npm i cors', e di usarlo co
 
 
 
-Fare il POST di un articolo dal form di aggiunta articolo
-Fare il fetch degli articoli presenti nel database e visualizzarli nella homepage
+Fare il POST di un articolo dal form di aggiunta articolo fatto
+Fare il fetch degli articoli presenti nel database e visualizzarli nella homepage fatto
 
 
 
