--- a/M6/M6D4/UPLOAD SU GITHUB/index.html
+++ b/M6/M6D4/UPLOAD SU GITHUB/index.html
@@ -1,5 +1,13 @@
-<html>
---> ## EPIC Blog API
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <!-- ## EPIC Blog API
 
 Oggi continuiamo a costruire l’API Blog.
 
@@ -13,5 +21,6 @@ Implementa i seguenti endpoint:
 – PUT /blogPosts/:id/comment/:commentId => cambia un commento di un post specifico
 – DELETE /blogPosts/:id/comment/:commentId=>elimina un commento specifico da un post specifico
 
-Il backend dovrebbe anche collegare i post ai loro autori. Popolali se necessario.<!--
+Il backend dovrebbe anche collegare i post ai loro autori. Popolali se necessario. -->
+</body>
 </html>
