--- a/M6/M6D2/UPLOAD SU GITHUB/index.html
+++ b/M6/M6D2/UPLOAD SU GITHUB/index.html
@@ -85,7 +85,7 @@ Fare il fetch degli articoli presenti nel database e visualizzarli nella homepag
 
 ## EXTRA
 
-GET /authors/:id/blogPosts/ => ricevi tutti i blog post di uno specifico autore dal corrispondente ID 
+GET /authors/:id/blogPosts/ => ricevi tutti i blog post di uno specifico autore dal corrispondente ID  fatto
 GET /blogPosts?title=whatever => filtra i blog post e ricevi l'unico che corrisponda alla condizione di ricerca (es.: titolo contiene "whatever")
 Aggiungi la funzionalità di ricerca dei post nel frontend
 
