--- a/M6/M6D3/UPLOAD SU GITHUB/index.html
+++ b/M6/M6D3/UPLOAD SU GITHUB/index.html
@@ -16,12 +16,12 @@ Oltre agli esercizi di codice vorremmo che provassi ad usare le query in MongoCo
 
 Importa la collection di esempio fornita in un database dedicato. Esegui le seguenti query usando MongoCompass e prendi nota delle query che hai usato e il numero delle risorse trovate. 
 
-Trova tutte le risorse con il dato isActive corrispondente a true
-Trova tutte le risorse con il dato age maggiore di 26
-Trova tutte le risorse con il dato age maggiore di 26 e minore o uguale a 30
-Trova tutte le risorse con il dato eyes che sia brown o blue
-Trova tutte le risorse che non presentano il dato eyes uguale a green
-Trova tutte le risorse con non presentano il dato eyes uguale a green e neanche blue
-Trova tutte le risorse con il dato company uguale a "FITCORE" e ritorna solo l'email */ -->
+Trova tutte le risorse con il dato isActive corrispondente a true {isActive: true} FATTO
+Trova tutte le risorse con il dato age maggiore di 26 {age: { $gt: 26}} fatto
+Trova tutte le risorse con il dato age maggiore di 26 e minore o uguale a 30 {$and: [{age: {$gt: 26}}, {age: {$lte: 30}}]} fatto
+Trova tutte le risorse con il dato eyes che sia brown o blue {$or:[{eyeColor: "brown"},{eyeColor: "blue"}]}
+Trova tutte le risorse che non presentano il dato eyes uguale a green {$nor:[{eyeColor: "green"}]} 
+Trova tutte le risorse con non presentano il dato eyes uguale a green e neanche blue {$nor:[{eyeColor: "green"}, {eyeColor: "blue"}]}
+Trova tutte le risorse con il dato company uguale a "FITCORE" e ritorna solo l'email {$and:[{company: "FITCORE"}]} */ -->
 </body>
 </html>
