--- a/M6/M6D4/UPLOAD SU GITHUB/index.html
+++ b/M6/M6D4/UPLOAD SU GITHUB/index.html
@@ -16,10 +16,10 @@ Il backend dovrebbe dare la possibilità di aggiungere commenti agli articoli. I
 Implementa i seguenti endpoint:
 
 – GET /blogPosts/:id/comments => ritorna tutti i commenti di uno specifico post FATTO
-– GET /blogPosts/:id/comments/:commentId=> ritorna un commento specifico di un post specifico FATTO
-– POST /blogPosts/:id => aggiungi un nuovo commento ad un post specifico fatto
-– PUT /blogPosts/:id/comment/:commentId => cambia un commento di un post specifico FATTO
-– DELETE /blogPosts/:id/comment/:commentId=>elimina un commento specifico da un post specifico FATTO
+– GET /blogPosts/:id/comments/:commentId=> ritorna un commento specifico di un post specifico 
+– POST /blogPosts/:id => aggiungi un nuovo commento ad un post specifico 
+– PUT /blogPosts/:id/comment/:commentId => cambia un commento di un post specifico 
+– DELETE /blogPosts/:id/comment/:commentId=>elimina un commento specifico da un post specifico 
 
 Il backend dovrebbe anche collegare i post ai loro autori. Popolali se necessario. -->
 </body>
